env/prd/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitops-api
  template:
    metadata:
      labels:
        app: gitops-api
    spec:
      containers:
      - name: app
        image: docker.io/pullup42/gitops:api
        ports:
        - containerPort: 3000
        command: ["/bin/sh", "-c"]
        args: ["source /app/secrets/secrets.env && node server.js"]
        volumeMounts:
        - name: secrets-volume
          mountPath: /app/secrets
      volumes:
      - name: secrets-volume
        emptyDir: {}
