env/prd/patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops
spec:
  replicas: 3
