env/prd/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-api
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: gitops-api
