env/prd/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-gateway
  namespace: prod
spec:
  gatewayClassName: traefik
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing
  namespace: prod
spec:
  parentRefs:
  - name: prod-gateway
  hostnames:
  - "pullupToGitops.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: gitops-api
      port: 3000
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: gitops
      port: 3000
